Experience hrefs fixed but there is still an overlap between the navbar and the pages

--- a/src/components/Worked/Worked.css
+++ b/src/components/Worked/Worked.css
@@ -1,4 +1,4 @@
-.worked {
+#worked {
     display: flex;
     z-index: 100;
     align-items: center;
